Added ListView layout to RelativeView layout - Added LinearLayout that contains imageView and TextView - Renamed the filenames having "-" to "_" to comply with naming conventions in drawable - Added MainList Adapter that sets the image resource to image View and text to text View

--- a/akarshseggemuresume/app/src/main/res/values/strings.xml
+++ b/akarshseggemuresume/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Akarsh Seggemu resume</string>
+    <string name="flag_of_uk">flag of UK</string>
 </resources>
