Added layout for ResumeSchemaActivity - Added Adapter for ResumeSchema - Updated MainActivity to set locale on the item selected - Updated AndroidMainfest to include ResumeSchemaActivity

--- a/akarshseggemuresume/app/src/main/res/values/strings.xml
+++ b/akarshseggemuresume/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="work_permit">Work permit</string>
     <string name="date_of_birth">Date of birth</string>
     <string name="place_of_birth">Place of birth</string>
+    <string name="english_resume" translatable="false">English resume</string>
+    <string name="deutsch_lebenslauf" translatable="false">Deutsch lebenslauf</string>
 </resources>
