Added onItemClick listener to open URL in a browser
- Added a string that is show during the dialog box that appears during the time of choosing a browser when the user has clicked on an item in the profiles listView.

--- a/akarshseggemuresume/app/src/main/res/values/strings.xml
+++ b/akarshseggemuresume/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="place_of_birth">Place of birth</string>
     <string name="english_resume" translatable="false">English resume</string>
     <string name="deutsch_lebenslauf" translatable="false">Deutsch lebenslauf</string>
+    <string name="chooser_title">Complete action using</string>
 </resources>
