Added back button navigation to all activities - Commented the log info messages - Added setTitle to the activity name - Added german version for the string name chooser_title

--- a/akarshseggemuresume/app/src/main/res/values-de/strings.xml
+++ b/akarshseggemuresume/app/src/main/res/values-de/strings.xml
@@ -19,4 +19,5 @@
     <string name="work_permit">Arbeitserlaubnis</string>
     <string name="date_of_birth">Geburtsdatum</string>
     <string name="place_of_birth">Geburtsort</string>
+    <string name="chooser_title">Aktion ausführen mit</string>
 </resources>
