--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="english_resume" translatable="false">English resume</string>
     <string name="deutsch_lebenslauf" translatable="false">Deutsch lebenslauf</string>
     <string name="chooser_title">Complete action using</string>
+    <string name="resume_title">English resume</string>
 </resources>
